--- a/profile_card.html
+++ b/profile_card.html
@@ -17,10 +17,10 @@
             </div>
             <div class="socials">
                 <div class="social_icon">
-                    <img src="/profile_card_icons/menu.png" alt="socials" class="menu"></a>
-                    <a href="https://github.com/" target="_blank" rel="noopener"><img src="/profile_card_icons/github.png" alt="Github" class="github"></a> <!--replace https://github.com/<user_name>-->
-                    <a href="https://linkedin.com" target="_blank" rel="noopener"><img src="/profile_card_icons/linkedin.png" alt="LinkedIn" class="linkedin"></a> <!--replace https://LinkedIn.com/<user_name>-->
-                    <a href="https://X.com" target="_blank" rel="noopener"><img src="/profile_card_icons/X.png" alt="X(twitter)" class="twitter"></a> <!--replace https://X.com/<user_name>-->
+                    <img src="profile_card_icons/menu.png" alt="socials" class="menu"></a>
+                    <a href="https://github.com/" target="_blank" rel="noopener"><img src="profile_card_icons/github.png" alt="Github" class="github"></a> <!--replace https://github.com/<user_name>-->
+                    <a href="https://linkedin.com" target="_blank" rel="noopener"><img src="profile_card_icons/linkedin.png" alt="LinkedIn" class="linkedin"></a> <!--replace https://LinkedIn.com/<user_name>-->
+                    <a href="https://X.com" target="_blank" rel="noopener"><img src="profile_card_icons/X.png" alt="X(twitter)" class="twitter"></a> <!--replace https://X.com/<user_name>-->
                 </div>
             </div>
         </div>
